# org-mcp-demo

./: .gitignore  ARCHITECTURE.md  CLIENT_README.md  DATA_MODEL.md  GENERATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PULL_REQUEST_SUMMARY.md  README.md  README_CLIENT.md  SETUP.md  USAGE_GUIDE.md  aviation_forum_tool.py  demo_aviation_tool.py  example.py  example_usage.py  examples.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: ARCHITECTURE.md
examples/: README.md  aviation_forum_queries.py  basic_usage.py  usage_example.py
neo4j_aircraft_client/: __init__.py  connection.py  exceptions.py  models.py  repository.py
neo4j_client/: README.md  __init__.py  connection.py  exceptions.py  models.py  repository.py
org-setup-files/agents/: neo4j-local-client-generator.md
sample-mcp-config/: neo4j-mcp-docker-config.json  neo4j-mcp-local-config.json
tests/: __init__.py  conftest.py  test_repository.py
